# OpenCVProjects

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  links
.github/workflows/: docker-image.yml
data/: asus_zenbook_webcam.xml  asus_zenbook_webcam.yaml  chessboard_param.xml  front_webcam.yml  points.csv
docs/: ColmapDockerfile  affine_transformation.md  bag_of_words.md  colmap.md  edge_detection.md  epipolar_geometry.md  essential_matrix.md  ffmpeg.md  fundamental_matrix.md  histogram_analysis.md  homography.md  image_rectification.md  image_resolution_and_calibration_parameter.md  kalman_filter.md  laser_triangulation.md  lense_distortion.md  parallax.md  perspective_n_point.md  perspective_transform.md  projection_camera_intrinsic.md  slam_loop_closure.md  stereo_vision.md  triangulation.md  visual_odometry.md
images/stereo_calibration/: extrinsics.yml  intrinsics.yml
images/stereo_vision/: left_pnts  right_pnts
scripts/: virtual_camera.py
src/: 2d_image_point_to_3d_world_unit_vector.cpp  BasicOperations.cpp  OpenCV3BasicOperations.cpp  `stereo_calib.cpp  affine_transformation.cpp  affine_transformation_example.cpp  bal_problem.cpp  bal_problem.h  basic_operations.cpp  blob_detection.cpp  bundle_adjuster_example1.cpp  bundle_adjuster_example2.cpp  camera_calibration.cpp  camera_calibration_example.cpp  convolution.cpp  convolution.cpp.autosave  coordinate_system_points.cpp  corner_detection.cpp  edge_detection.cpp  epipolar_geometry.cpp  essential_matrix_estimation.cpp  example_sfm_trajectory_reconstruction.cpp  fback.cpp  feature_description.cpp  feature_detection.cpp  flow_video.cpp  fundamental_matrix_estimation.cpp  histogram_analysis.cpp  homogeneous_conversion.cpp  homogenious_conversion.cpp  homography.cpp  homography_example.cpp  hough_transform.cpp  icp.cpp  image_moments.cpp  image_thresholding.cpp  kalman_filter (copy).cpp  lkdemo.cpp  morphological_transformation.cpp  old.basic_operations.cpp  (+21 more)
src/ColorWheelHSV/: ImageUtils.cpp
src/legecy/: HOG-KalmanFilter.cpp  KalmanFilter.cpp  Multi-Kalman.cpp  camera_calibration_example.cpp  epipolar_geometry.cpp  example_sfm_scene_reconstruction.cpp  optical_Flow_demo.cpp  sandbox.cpp  sfm_example.cpp  stereo_calibration_example.cpp
